[gd_scene load_steps=15 format=4 uid="uid://duew7u1ij35jj"]

[ext_resource type="Script" path="res://scripts/levels/level1.gd" id="1_51e5y"]
[ext_resource type="Texture2D" uid="uid://d1wufi0db30i8" path="res://assets/section1/background.png" id="2_qg5s7"]
[ext_resource type="Texture2D" uid="uid://cvqpilc3ibhqj" path="res://assets/section1/midground.png" id="3_g15pv"]
[ext_resource type="PackedScene" uid="uid://cvcffxxqrpo18" path="res://scenes/puffer_fish.tscn" id="4_yt1cb"]
[ext_resource type="PackedScene" uid="uid://da1y6457akk57" path="res://scenes/bubble.tscn" id="5_7yxvs"]
[ext_resource type="Theme" uid="uid://dqryax7e1nmkx" path="res://assets/bubbleJamTheme.tres" id="6_xbwmr"]
[ext_resource type="PackedScene" uid="uid://dxhjqvqq6yi0m" path="res://scenes/urchin.tscn" id="7_r4k7q"]
[ext_resource type="PackedScene" uid="uid://q0f6xfqtlwoc" path="res://scenes/whale.tscn" id="8_alxlb"]
[ext_resource type="Texture2D" uid="uid://x0g7lywwxqcw" path="res://assets/rocks.png" id="9_80bck"]
[ext_resource type="PackedScene" uid="uid://68d53l1ufr01" path="res://scenes/coin.tscn" id="10_jdby7"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_ipsy5"]
scenes/1/scene = ExtResource("7_r4k7q")
scenes/3/scene = ExtResource("8_alxlb")

[sub_resource type="TileSet" id="TileSet_nmgb3"]
tile_size = Vector2i(200, 200)
sources/1 = SubResource("TileSetScenesCollectionSource_ipsy5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w1gr"]
size = Vector2(4208, 352)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk6w2"]

[node name="level1" type="Node2D"]
position = Vector2(0, -15)
script = ExtResource("1_51e5y")

[node name="bgLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="background" type="Sprite2D" parent="bgLayer"]
z_index = -1
texture_repeat = 2
position = Vector2(100, -1400)
texture = ExtResource("2_qg5s7")
region_enabled = true
region_rect = Rect2(0, 0, 4200, 7800)

[node name="midgroundPara" type="Parallax2D" parent="."]
z_index = -1
scroll_scale = Vector2(0.45, 0.45)
scroll_offset = Vector2(0, -1400)

[node name="midground" type="Sprite2D" parent="midgroundPara"]
texture = ExtResource("3_g15pv")

[node name="pufferFish" parent="." instance=ExtResource("4_yt1cb")]
position = Vector2(0, 1039)
current_state = 3

[node name="bubble" parent="." instance=ExtResource("5_7yxvs")]
position = Vector2(0, 2200)
bubble_scale = 0.75

[node name="playerCam" type="Camera2D" parent="."]
position = Vector2(0, 127)
zoom = Vector2(0.2, 0.2)
limit_left = -2100
limit_right = 2300
limit_bottom = 2500

[node name="uiLayer" type="CanvasLayer" parent="."]

[node name="uiMargin" type="MarginContainer" parent="uiLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("6_xbwmr")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="timerLabel" type="Label" parent="uiLayer/uiMargin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"subLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"

[node name="obstacles" type="Node2D" parent="."]

[node name="urchinLayer" type="TileMapLayer" parent="obstacles"]
use_parent_material = true
position = Vector2(0, 1900)
tile_map_data = PackedByteArray("AAD5//v/AQAAAAAAAQD+//b/AQAAAAAAAQAGAPf/AQAAAAAAAQAGAP3/AQAAAAAAAQAEAPD/AQAAAAAAAQAHAOj/AQAAAAAAAQD4/+b/AQAAAAAAAQD9/93/AQAAAAAAAQD3/+D/AQAAAAAAAQD3//b/AQAAAAAAAQAKAPL/AQAAAAAAAQAJAOP/AQAAAAAAAQD3/+3/AQAAAAAAAQABAOn/AQAAAAAAAQD9/+P/AQAAAAAAAQADAOH/AQAAAAAAAQAIAN3/AQAAAAAAAQD6//H/AQAAAAAAAQA=")
tile_set = SubResource("TileSet_nmgb3")

[node name="winZone" type="Area2D" parent="."]
position = Vector2(0, -5525)
collision_layer = 0
collision_mask = 4

[node name="winCol" type="CollisionShape2D" parent="winZone"]
position = Vector2(110, 166)
shape = SubResource("RectangleShape2D_8w1gr")

[node name="leftWall" type="StaticBody2D" parent="."]
position = Vector2(-2181, -1172)
collision_mask = 0

[node name="wallSprite" type="Sprite2D" parent="leftWall"]
texture_repeat = 2
texture = ExtResource("9_80bck")
region_enabled = true
region_rect = Rect2(0, 0, 400, 10000)

[node name="wallCol" type="CollisionShape2D" parent="leftWall"]
shape = SubResource("RectangleShape2D_wk6w2")

[node name="rightWall" type="StaticBody2D" parent="."]
position = Vector2(2399, -1172)
collision_mask = 0

[node name="wallSprite" type="Sprite2D" parent="rightWall"]
texture_repeat = 2
texture = ExtResource("9_80bck")
region_enabled = true
region_rect = Rect2(0, 0, 400, 10000)

[node name="wallCol" type="CollisionShape2D" parent="rightWall"]
shape = SubResource("RectangleShape2D_wk6w2")

[node name="bottomWall" type="StaticBody2D" parent="."]
position = Vector2(61, 2693)
rotation = 1.57079
collision_mask = 0

[node name="wallSprite" type="Sprite2D" parent="bottomWall"]
visible = false
texture_repeat = 2
texture = ExtResource("9_80bck")
region_enabled = true
region_rect = Rect2(0, 0, 400, 10000)

[node name="wallCol" type="CollisionShape2D" parent="bottomWall"]
shape = SubResource("RectangleShape2D_wk6w2")

[node name="coin" parent="." instance=ExtResource("10_jdby7")]
position = Vector2(1260, -3695)

[node name="coin2" parent="." instance=ExtResource("10_jdby7")]
position = Vector2(-1058, -2284)

[node name="coin3" parent="." instance=ExtResource("10_jdby7")]
position = Vector2(917, -389)
